--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -19,15 +19,6 @@
   background-size: cover;
 }
 
-/* .header__right {
-  width: 45%;
-} */
-
-/* .header__right > img {
-  width: 100%;
-  height: 100%;
-} */
-
 .header__top {
   align-items: center;
   height: fit-content;
@@ -222,5 +213,11 @@
   .header__right {
     display: none;
     overflow: hidden;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  .main__container-2 > .main__body > .main__left > h2 {
+    font-size: 44px !important;
   }
 }
